# Francisco-Diaz---POO-Repositorio-personal-

./: .gitignore  README.md
Ejercicio04_TableroKanban/: deploy-vps.sh
Ejercicio04_TableroKanban/TableroKanban/: .gitignore  CMakeLists.txt
Ejercicio04_TableroKanban/TableroKanban/src/: ApiKanban.cpp  ApiKanban.h  ColumnaWidget.cpp  ColumnaWidget.h  DialogoTarjeta.cpp  DialogoTarjeta.h  KanbanView.cpp  KanbanView.h  ModeloKanban.cpp  ModeloKanban.h  Modelos.h  TarjetaWidget.cpp  TarjetaWidget.h  VentanaPrincipal.cpp  VentanaPrincipal.h  main.cpp
Ejercicio04_TableroKanban/backend-extension/app/: PARCHE-main.py.txt  kanban.py
Ejercicio04_TableroKanban/db/: kanban_tables.sql
Ejercicio07_LoginClima/LoginClima/: .gitignore  CMakeLists.txt  config.ini
Ejercicio07_LoginClima/LoginClima/src/: ApiClima.cpp  ApiClima.h  Clima.cpp  Clima.h  Config.cpp  Config.h  Logger.cpp  Logger.h  Login.cpp  Login.h  Login.ui  Modelos.h  Pantalla.h  Ventana.cpp  Ventana.h  main.cpp
Ejercicio1-GestorTPs/: Ejercicio1.pro  actionlog.cpp  actionlog.h  edittrabajodialog.cpp  edittrabajodialog.h  loginwidget.cpp  loginwidget.h  main.cpp  mainwidget.cpp  mainwidget.h  notasdialog.cpp  notasdialog.h  sessionmanager.cpp  sessionmanager.h  trabajo.h  trabajostore.cpp  trabajostore.h  userrepository.cpp  userrepository.h
Ejercicio2-MonitorRec/: MainWindow.cpp  MainWindow.h  Makefile  MonitorController.cpp  MonitorController.h  MonitorVPS.pro
Ejercicio2-MonitorRec/server/: salud.php
Ejercicio3-LienzoCollab/client/: CMakeLists.txt  CollabDraw.pro  DrawingModel.cpp  DrawingModel.h  DrawingView.cpp  DrawingView.h  MainWindow.cpp  MainWindow.h  Makefile  Makefile.Debug  Makefile.Release  StrokeTypes.cpp  StrokeTypes.h  SyncService.cpp  SyncService.h  main.cpp
Ejercicio3-LienzoCollab/server/: main.py  requirements.txt
